# l2-cv-bot

./: .gitignore  CMakeLists.txt  README.md  build-vs15x32.bat  build-vs15x64.bat  build.bat  clean.bat  run.bat
install/: run.bat
lib/interception/: CMakeLists.txt  interception.c
src/: Bot.cpp  Bot.h  Brain.cpp  Brain.h  Capture.cpp  Capture.h  Eyes.cpp  Eyes.h  FPS.h  Hands.cpp  Hands.h  Input.cpp  Input.h  Intercept.cpp  Intercept.h  Options.cpp  Options.h  Runloop.cpp  Runloop.h  Screenshot.cpp  Screenshot.h  Utils.cpp  Utils.h  Window.cpp  Window.h  main.cpp
